--- a/public/modules/articles/assets/scss/articles.scss
+++ b/public/modules/articles/assets/scss/articles.scss
@@ -66,10 +66,11 @@
 	}
 	
 	.bookmark-buttons {
-
+		
 		position: absolute;
-		top: 12px;
-		right: 12px;
+		top: 23px;
+		right: 60px;
+		
 		cursor: pointer;
 		
 		
