--- a/public/modules/articles/directives/pw-article-viewedit/assets/scss/_content-marked.scss
+++ b/public/modules/articles/directives/pw-article-viewedit/assets/scss/_content-marked.scss
@@ -103,6 +103,10 @@
 			}
 		}
 		
+		table {
+			overflow: hidden;
+		}
+		
 		/* list padding */
 		@media (max-width: $screen-sm-max) {
 			ul, ol {
